formver.compiler-plugin/testData/diagnostics/conversion/nameing/predicate_method_collection_base_consistency_error.kt
// WITH_STDLIB

fun <!VIPER_TEXT!>`p$shared`<!>() {}

fun <!VIPER_TEXT!>predicateMethodCollectionBaseConsistencyError<!>(xs: List<Int>) {
    `p$shared`()
    xs.isEmpty()
}
